# ai-quantitative-trading-system

./: .env.database  API_GATEWAY_COMPILATION_SUCCESS_REPORT.md  API_GATEWAY_FINAL_SUCCESS_REPORT.md  COMPILATION_SUCCESS_REPORT.md  CURRENT_STATUS.md  Cargo.toml  DEVELOPMENT_GUIDELINES.md  FINAL_SUCCESS_REPORT.md  FINAL_SYSTEM_STATUS.md  FINAL_SYSTEM_STATUS_REPORT.md  GATEWAY_COMPILATION_FIX_REPORT.md  PROFESSIONAL_KLINE_CHART_COMPLETE.md  README.md  SYSTEM_RUNNING_STATUS_REPORT.md  SYSTEM_STATUS_CHECK_REPORT.md  docker-compose.dev.yml  quick-fix-market-data.ps1  start-full-system.ps1  stop-full-system.ps1  test-current-system.ps1  test-direct-websocket.ps1  test-realtime-updates.ps1  test-websocket-connection.ps1  verify-system.ps1
frontend/: components.d.ts  index.html  mock-package.json  package-lock.json  package.json
frontend/src/: main.ts
frontend/src/components/trading/: OrderBook.vue  TradingPanel.vue
frontend/src/router/: index.ts
frontend/src/stores/: trading.ts  user.ts  websocket.ts
frontend/src/styles/: global.scss
frontend/src/utils/: api.ts
frontend/src/views/: SimpleTest.vue  TestPage.vue  TradingDashboard.vue
services/gateway/: .env.example  Cargo.toml  README.md  start.bat  start.sh
services/gateway/src/: config.rs  main.rs  state.rs
services/gateway/src/handlers/: error.rs  mod.rs  response.rs
services/gateway/src/middleware/: auth.rs  cors.rs  metrics.rs  mod.rs  rate_limit.rs  request_id.rs
services/gateway/src/routes/: auth.rs  health.rs  metrics.rs  mod.rs  proxy.rs
services/gateway/src/services/: circuit_breaker.rs  mod.rs  proxy.rs  rate_limiter.rs  service_registry.rs
services/gateway/src/websocket/: connection.rs  message.rs  mod.rs  proxy.rs
services/market-data/: Cargo.toml
services/market-data/src/: main.rs  main_simple.rs
services/market-data/src/config/: exchanges.rs  mod.rs  server.rs  storage.rs
services/market-data/src/connectors/: binance.rs  connection_pool.rs  exchange_manager.rs  mod.rs  websocket_client.rs
services/market-data/src/continuity/: gap_detector.rs  kline_detector.rs  mod.rs  state_manager.rs
services/market-data/src/handlers/: health.rs  mod.rs
services/market-data/src/websocket/: mod.rs
services/strategy-engine/src/ai/: deepseek.rs  mod.rs  strategy_generator.rs
services/trading-engine/: Cargo.toml
services/trading-engine/src/: main.rs  state.rs
services/trading-engine/src/config/: execution.rs  mod.rs  risk.rs  trading.rs
services/trading-engine/src/engines/: execution_engine.rs  matching_engine.rs  mod.rs  risk_engine.rs
services/trading-engine/src/exchanges/: binance.rs  mod.rs  traits.rs
services/trading-engine/src/handlers/: accounts.rs  health.rs  mod.rs  orders.rs  positions.rs
services/trading-engine/src/models/: mod.rs  order.rs  position.rs
services/trading-engine/src/services/: account_service.rs  execution_service.rs  mod.rs  order_service.rs  position_service.rs  risk_service.rs
services/trading-engine/src/storage/: account_store.rs  mod.rs  order_store.rs  position_store.rs  trade_store.rs
services/trading-engine/src/websocket/: account.rs  mod.rs  orders.rs  positions.rs
shared/models/src/: common.rs  lib.rs  market.rs  risk.rs  strategy.rs  trading.rs  user.rs
shared/protocols/src/: grpc.rs  http.rs  kafka.rs  lib.rs  websocket.rs
shared/utils/: Cargo.toml
shared/utils/src/: auth.rs  config.rs  crypto.rs  error.rs  http.rs  lib.rs  logging.rs  metrics.rs  time.rs  validation.rs
